feat: add changes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link rel="icon" href="favicon.png" type="image/png" />
     <title>Madhuprasad Ramalingam - Head of Digital Products | Fintech Leader</title>
     <meta name="description" content="Senior fintech professional with 18+ years of experience in digital transformation, IT project management, and business process reengineering across Banking, NBFC, and Financial Services." />
     <meta name="author" content="Madhuprasad Ramalingam" />
@@ -13,11 +11,11 @@
     <meta property="og:title" content="Madhuprasad Ramalingam - Head of Digital Products" />
     <meta property="og:description" content="Senior fintech professional with 18+ years of experience in digital transformation, IT project management, and business process reengineering." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://madhuprasad.in" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Madhuprasad Ramalingam - Head of Digital Products" />
+    <meta name="twitter:description" content="Senior fintech professional with 18+ years of experience in digital transformation, IT project management, and business process reengineering." />
   </head>
 
   <body>
